<resources>
    <string name="app_name">ArtifactTracker</string>
    <string name="VIEW_ARTIFACT">View Artifact</string>
    <string name="title_activity_add_artifact_form">AddArtifactForm</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_add_site_form">AddSiteForm</string>
    <string name="title_activity_add_unit_form">AddUnitForm</string>
    <string name="viewArtifactLabelValue">View Artifacts</string>
    <string name="SiteName">Site Name</string>
    <string name="SiteID">Site ID</string>
    <string name="SiteFormLabel" />
    <string name="AddSiteLabel">Add a Site</string>
    <string name="UnitFormLabel">Add a Grid Unit</string>
    <string name="UnitName">Unit Name</string>
    <string name="UnitID">Unit ID</string>
    <string name="UnitWidth">Unit Width</string>
    <string name="UnitHeight">Unit Height</string>
    <string name="LabelLayerForm">Add a Layer</string>
    <string name="LayerName">Layer Name</string>
    <string name="LayerID">Layer ID</string>
    <string name="ButtonSaveLayer">Add Layer</string>
    <string name="SaveSite">Add A Site</string>
    <string name="SaveUnit">Add A Unit</string>
    <string name="SaveArtifact">Add A Artifact</string>
    <string name="AddArtifact">Add A Artifact</string>
    <string name="ArtifactType">Artifact Type</string>
    <string name="ArtifactID">Artifact ID</string>
    <string name="DBServer">Server Address</string>
    <string name="Password">Password</string>
    <string name="Port">Port</string>
    <string name="Username">Username</string>
    <string name="AddArtifactType">Add Artifact Type</string>
    <string name="SaveLayer">Add Layer</string>
</resources>