<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUnitForm">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="384dp"
        android:layout_height="301dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/grpSite"
            android:layout_width="370dp"
            android:layout_height="297dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="329dp"
                android:layout_height="44dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblSiteName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Site Name:"
                    android:textAlignment="center" />

                <Spinner
                    android:id="@+id/selectSiteName"
                    android:layout_width="201dp"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:id="@+id/btnAddSite"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:contentDescription="Add Site"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/add" />
            </LinearLayout>

            <EditText
                android:id="@+id/txtUnitName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/UnitName"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtUnitId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/UnitID"
                android:inputType="textPersonName" />
        <LinearLayout
            android:layout_width="329dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/txtUnitWidth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/UnitWidth"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/selectWidthUnits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/measurementUnits" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="329dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/txtUnitHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/UnitHeight"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/selectHeightUnits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/measurementUnits" />
        </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:padding="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btnAddArtifact"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="Add Artifacts"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/add_artifact" />

        <ImageButton
            android:id="@+id/btnViewArtifact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="View Artifacts"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/view_artifacts" />

        <ImageButton
            android:id="@+id/btnGraph"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="Graphs"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/graph" />

        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="Settings"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/settings" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSaveUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/SaveUnit"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView4" />

    <TextView
        android:id="@+id/lblArtifactTypeForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UnitFormLabel"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>