<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSiteForm">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="369dp"
        android:layout_height="208dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/grpSiteForm"
            android:layout_width="366dp"
            android:layout_height="132dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtSiteId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/SiteID"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtSiteName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/SiteName"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/lblCoordinates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GPS Datum" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtLatitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Latitude"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/txtLongitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Longitude"
                    android:inputType="numberDecimal" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:padding="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btnAddArtifact"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="Add Artifacts"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/add_artifact" />

        <ImageButton
            android:id="@+id/btnViewArtifact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="View Artifacts"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/view_artifacts" />

        <ImageButton
            android:id="@+id/btnGraph"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="Graphs"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/graph" />

        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="Settings"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/settings" />

    </LinearLayout>

    <TextView
        android:id="@+id/lblSiteForm"
        android:layout_width="151dp"
        android:layout_height="46dp"
        android:text="@string/AddSiteLabel"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSaveSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/SaveSite"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>