<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_layer_form">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="360dp"
        android:layout_height="279dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/grpLayer"
            android:layout_width="370dp"
            android:layout_height="297dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="329dp"
                android:layout_height="44dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblSite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Site Name:"
                    android:textAlignment="center" />

                <Spinner
                    android:id="@+id/selectSiteName"
                    android:layout_width="201dp"
                    android:layout_height="wrap_content" />
                <ImageButton
                    android:id="@+id/btnAddSite"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:contentDescription="Add Site"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/add" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="329dp"
                android:layout_height="44dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Unit Name:"
                    android:textAlignment="center" />

                <Spinner
                    android:id="@+id/selectUnit"
                    android:layout_width="201dp"
                    android:layout_height="wrap_content" />
                <ImageButton
                    android:id="@+id/btnAddUnit"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:contentDescription="Add Unit"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/add" />
            </LinearLayout>

            <EditText
                android:id="@+id/txtLayerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/LayerName"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtLayerId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/LayerID"
                android:inputType="textPersonName" />

        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:padding="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btnAddArtifact"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="Add Artifacts"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/add_artifact" />

        <ImageButton
            android:id="@+id/btnViewArtifact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="View Artifacts"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/view_artifacts" />

        <ImageButton
            android:id="@+id/btnGraph"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="Graphs"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/graph" />

        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="Settings"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/settings" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSaveLayer"
        android:layout_width="176dp"
        android:layout_height="87dp"
        android:text="@string/SaveLayer"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

    <TextView
        android:id="@+id/lblLayerForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LabelLayerForm"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>